<resources>
    <string name="app_name">News</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="news_activity">News Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="app_para"><b>LONDON</b> — Cryptocurrencies “have no intrinsic value” and people who invest in them should be prepared to lose all their money, Bank of England Governor Andrew Bailey said. \n\n

    Digital currencies like bitcoin, ether and even dogecoin have been on a tear this year, reminding some investors of the 2017 crypto bubble in which bitcoin blasted toward $20,000, only to sink as low as $3,122 a year later. \n\n

    Asked at a press conference Thursday about the rising value of cryptocurrencies, Bailey said: “They have no intrinsic value. That doesn’t mean to say people don’t put value on them, because they can have extrinsic value. But they have no intrinsic value.” \n\n

    “I’m going to say this very bluntly again,” he added. “Buy them only if you’re prepared to lose all your money.” \n\n

    Bailey’s comments echoed a similar warning from the U.K.’s Financial Conduct Authority. \n\n

    “Investing in cryptoassets, or investments and lending linked to them, generally involves taking very high risks with investors’ money,” the financial services watchdog said in January. \n\n

    “If consumers invest in these types of product, they should be prepared to lose all their money.” \n\n

    Bailey, who was formerly the chief executive of the FCA, has long been a skeptic of crypto. In 2017, he warned: “If you want to invest in bitcoin, be prepared to lose all your money.”</string>

    <string name="date"> Sunday, 9 May 2021</string>
    <string name="Headline">Crypto investors should be prepared to lose all their money, BOE governor says</string>
    <string name="Publisher">Published by Ryan Browne</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="dummyHeading">Candidate Biden Called Saudi Arabia</string>

    <!--    Login-->

    <string name="welcome">Welcome Back!</string>
    <string name="loginText">Log in to your existing account of News</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="accountCheck">Don\'t have an account?</string>

    <!--    Signup-->

    <string name="getStarted">Let\'s Get Started!</string>
    <string name="signupText">Create an account in News to get all features</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="alreadyHave">Already have an account?</string>
    <string name="signup">Sign Up</string>

    <string name="facebook_app_id">1064894154175566</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">94bbcf7923b3c054bf082bf9cae39e0a</string>

</resources>